@@ -1,3 +1,12 @@
+2018-04-15  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [WPE] Install files needed for WebKitWebExtensions
+        https://bugs.webkit.org/show_bug.cgi?id=179915
+
+        Reviewed by Žan Doberšek.
+
+        * Source/cmake/OptionsWPE.cmake:
+
 2018-04-24  Zan Dobersek  <zdobersek@igalia.com>
 
         [WPE] Remove libgbm dependency
